# UAIbotPy

./: .gitignore  pyproject.toml
.github/workflows/: noxtests.yaml  publish.yml
uaibot/: __init__.py
uaibot/robot/: _create_franka_emika_3.py  _create_franka_emika_3_mod.py  _create_ur_ur3e.py  robot.py
